dist/objects/Engagement__c.object
<CustomObject>
    <description>Records student and tutor participation in particular cohorts/programmes</description>
    <fields>
        <fullName>BaselineQuizResponse__c</fullName>
        <label>Baseline Quiz Response</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BaselineQuizScore__c</fullName>
        <label>Baseline Quiz Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndlineQuizScore__c</fullName>
        <label>Endline Quiz Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EngagementStatus__c</fullName>
        <formula>IF(PercentageAttendanceToDate__c &gt; 0.75, &quot;Active Engagement&quot;, 

IF(PercentageAttendanceToDate__c &gt; 0.01, &quot;Passive Engagement&quot;, &quot;Inactive&quot;


)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the Student&apos;s level of engagement based on their attendance % to date (for all sessions where a register has been submitted)</inlineHelpText>
        <label>Engagement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExamBoard__c</fullName>
        <label>Exam Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AQA (Assessment and Qualifications Alliance)</fullName>
                </value>
                <value>
                    <fullName>CIE (University of Cambridge International Examinations)</fullName>
                </value>
                <value>
                    <fullName>CCEA (Council for the Curriculum, Examinations &amp; Assessment)</fullName>
                </value>
                <value>
                    <fullName>Edexcel</fullName>
                </value>
                <value>
                    <fullName>ICAAE (International Curriculum and Assessment Agency Examinations)</fullName>
                </value>
                <value>
                    <fullName>OCR (Oxford, Cambridge and RSA Examinations)</fullName>
                </value>
                <value>
                    <fullName>WJEC (Welsh Joint Education Committee)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tuition Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InitialDiagnosticsSurveyCompleted__c</fullName>
        <label>Initial Diagnostics Quiz Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastSessionDate__c</fullName>
        <label>Last Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PercentageAttendanceToDate__c</fullName>
        <formula>TotalSessionsAttended__c /  TotalAttendancesALL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage attendance so far (excludes attendances where session registers have not yet been submitted)</inlineHelpText>
        <label>Percentage Attendance To Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Dropped Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentExamBoard__c</fullName>
        <label>Student Exam Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Boards</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubjectAreaofStudy__c</fullName>
        <label>Subject / Area of Study</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAttendancesALL__c</fullName>
        <label>Total Attendances ALL</label>
        <summaryFilterItems>
            <field>Attendee__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Engagement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalSessionsAttended__c</fullName>
        <inlineHelpText>Number of sessions attended to date</inlineHelpText>
        <label>Total Sessions Attended</label>
        <summaryFilterItems>
            <field>Attendee__c.Status__c</field>
            <operation>equals</operation>
            <value>Attended, Late</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Engagement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TuitionGroupCurriculumSubject__c</fullName>
        <formula>TEXT(Group__r.SubjectFocus__c) &amp; &quot; &quot; &amp; TEXT( Group__r.CurriculumLevel__c )</formula>
        <label>Tuition Group Curriculum Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TuitionGroupFocus__c</fullName>
        <label>Tuition Group Focus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tutor__c</fullName>
        <formula>Group__r.LeadTutor__r.Contact__r.FirstName &amp; &quot; &quot;&amp;  Group__r.LeadTutor__r.Contact__r.LastName</formula>
        <inlineHelpText>The name of the tutor running the group to which the student has been assigned</inlineHelpText>
        <label>Tutor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tutor</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LastSessionDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>